fix off center grid issue

--- a/final/css/styles.less
+++ b/final/css/styles.less
@@ -242,6 +242,7 @@ div.cardfan:hover img:last-child {
         display: flex;
             flex-wrap: wrap;   
         text-align: center;
+        justify-content: center;
             figure{
             border: 2px inset @color2;
             background-color: lighten(@color0, 80%);
